<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/button_eventWithId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_eventWithId"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_eventWithIdAndLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_eventWithIdAndLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_eventWithIdAndLabelAndExtraData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_eventWithIdAndLabelAndExtraData"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_error"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_crash"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_crash"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_fragment"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_fragment_hideshow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_fragment_hideshow"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>